--- a/src/components/applicationItem/style.css
+++ b/src/components/applicationItem/style.css
@@ -1,13 +1,45 @@
-.aplication-item {
-  margin-bottom: 5px;
+.application-item-container .aplication-item {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 10px;
   border-radius: 5px;
-  box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
+  border: 1px solid #ddddd3;
+  background-color: #ffffff;
 }
-.aplication-item div {
+.application-item-container .aplication-item div {
+  padding-top: 5px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.aplication-item .client-name {
+.application-item-container .aplication-item .client-name {
+  text-align: center;
+}
+.application-item-container .aplication-item .client-name .client-name-title {
   font-weight: 600;
+}
+.application-item-container .aplication-item .type-price-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0.5rem;
+}
+.application-item-container .aplication-item .type-price-container .application-type {
+  width: 65px;
+  text-align: center;
+  padding: 5px 7px;
+  border-radius: 11px;
+}
+.application-item-container .aplication-item .type-price-container .application-type.pickup {
+  background-color: #ffc107;
+  color: #2e2e2e;
+}
+.application-item-container .aplication-item .type-price-container .application-type.delivery {
+  background-color: #1891ec;
+  color: #f0f0f0;
+}
+.application-item-container .aplication-item .type-price-container .application-price span {
+  font-weight: bold;
+  color: #4c4444;
 }
