--- a/src/components/applicationItem/style.scss
+++ b/src/components/applicationItem/style.scss
@@ -1,15 +1,58 @@
-.aplication-item {
-    margin-bottom: 5px;
-    border-radius: 5px;
-    box-shadow: 0 5px 7px -1px rgb(51 51 51 / 23%);
-
-    div {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-    .client-name {
-        font-weight: 600;
+.application-item-container {
+    .aplication-item {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding-left: 10px;
+        border-radius: 5px;
+        border: 1px solid #ddddd3;
+        background-color: #ffffff;
+        // box-shadow: 0 5px 7px -1px rgb(51 51 51 / 23%);
+        
+        div {
+            padding-top: 5px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .client-name{
+            text-align: center;
+            .client-name-title {
+                font-weight: 600;
+            }
+        }
+        
+    
+        .type-price-container {
+            display: flex;
+            justify-content: space-between;
+            padding: 0 0.5rem;
+    
+            .application-type {
+                width: 65px;
+                text-align: center;
+                padding: 5px 7px;
+                border-radius: 11px;
+    
+                &.pickup {
+                    background-color: #ffc107;
+                    color: #2e2e2e;
+                }
+    
+                &.delivery {
+                    background-color: #1891ec;
+                    color: #f0f0f0;
+                }
+            }
+    
+            .application-price {
+                span {
+                    font-weight: bold;
+                    color:#4c4444
+                }
+                
+            }
+        }
     }
 }
