--- a/src/components/applicationsList/style.css
+++ b/src/components/applicationsList/style.css
@@ -1,3 +1,11 @@
 .apps-list {
   width: 25%;
+  min-width: 200px;
+}
+@media only screen and (max-width: 1080px) {
+  .apps-list {
+    position: absolute !important;
+    z-index: 500;
+    left: 0;
+  }
 }
