--- a/src/components/applicationsList/style.scss
+++ b/src/components/applicationsList/style.scss
@@ -1,3 +1,9 @@
 .apps-list {
     width: 25%;
+    min-width: 200px;
+    @media only screen and (max-width: 1080px) {
+        position: absolute !important;
+        z-index: 500;
+        left: 0;
+      }
 }
