--- a/src/components/map/style.css
+++ b/src/components/map/style.css
@@ -1,4 +1,13 @@
 .leaflet-container {
-  width: 75%;
+  width: calc(100% - 300px);
   height: 100vh;
+}
+@media only screen and (max-width: 1080px) {
+  .leaflet-container {
+    width: 100%;
+  }
+  .leaflet-container .leaflet-left {
+    left: unset;
+    right: 0;
+  }
 }
