--- a/src/components/map/style.scss
+++ b/src/components/map/style.scss
@@ -1,4 +1,13 @@
 .leaflet-container {
-    width: 75%;
+    width: calc(100% - 300px);
     height: 100vh;
+
+    @media only screen and (max-width: 1080px) {
+      width: 100%;
+
+      .leaflet-left {
+        left: unset;
+        right: 0;
+      }
+    }
   }
